...

        await inventoryItemRepository.borrow(
          item,
          CustomUser.fromUser(user),
        );

        await eventRepository.add(item.id, eventType: 'Borrow');

        return true;
      },
      context,
      'borrowed',
    );
...
  handle(BuildContext context, InventoryItem item) {
    final eventRepository = context.read<EventRepository>();
    final inventoryItemRepository = context.read<InventoryItemRepository>();

    commonHandle(
      () async {
        await eventRepository.add(item.id, eventType: 'Release');
        await inventoryItemRepository.release(item);

        return true;
      },
      context,
      'released',
...
